Added Post route and updated Swagger
